crates/ruff_linter/src/rules/flake8_use_pathlib/snapshots/ruff_linter__rules__flake8_use_pathlib__tests__os-path-getsize_PTH202_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_use_pathlib/mod.rs
---
PTH202 `os.path.getsize` should be replaced by `Path.stat().st_size`
 --> PTH202_2.py:3:1
  |
1 | import os
2 |
3 | os.path.getsize(filename="filename")
  | ^^^^^^^^^^^^^^^
4 | os.path.getsize(filename=b"filename")
5 | os.path.getsize(filename=__file__)
  |
help: Replace with `Path(...).stat().st_size`

PTH202 `os.path.getsize` should be replaced by `Path.stat().st_size`
 --> PTH202_2.py:4:1
  |
3 | os.path.getsize(filename="filename")
4 | os.path.getsize(filename=b"filename")
  | ^^^^^^^^^^^^^^^
5 | os.path.getsize(filename=__file__)
  |
help: Replace with `Path(...).stat().st_size`

PTH202 `os.path.getsize` should be replaced by `Path.stat().st_size`
 --> PTH202_2.py:5:1
  |
3 | os.path.getsize(filename="filename")
4 | os.path.getsize(filename=b"filename")
5 | os.path.getsize(filename=__file__)
  | ^^^^^^^^^^^^^^^
  |
help: Replace with `Path(...).stat().st_size`
