crates/ruff_linter/src/rules/flake8_use_pathlib/snapshots/ruff_linter__rules__flake8_use_pathlib__tests__preview_PTH211.py.snap
---
source: crates/ruff_linter/src/rules/flake8_use_pathlib/mod.rs
---
PTH211 [*] `os.symlink` should be replaced by `Path.symlink_to`
 --> PTH211.py:5:1
  |
5 | os.symlink("usr/bin/python", "tmp/python")
  | ^^^^^^^^^^
6 | os.symlink(b"usr/bin/python", b"tmp/python")
7 | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
  |
help: Replace with `Path(...).symlink_to(...)`

ℹ Safe fix
2 2 | from pathlib import Path
3 3 | 
4 4 | 
5   |-os.symlink("usr/bin/python", "tmp/python")
  5 |+Path("tmp/python").symlink_to("usr/bin/python")
6 6 | os.symlink(b"usr/bin/python", b"tmp/python")
7 7 | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
8 8 | 

PTH211 [*] `os.symlink` should be replaced by `Path.symlink_to`
 --> PTH211.py:6:1
  |
5 | os.symlink("usr/bin/python", "tmp/python")
6 | os.symlink(b"usr/bin/python", b"tmp/python")
  | ^^^^^^^^^^
7 | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
  |
help: Replace with `Path(...).symlink_to(...)`

ℹ Safe fix
3 3 | 
4 4 | 
5 5 | os.symlink("usr/bin/python", "tmp/python")
6   |-os.symlink(b"usr/bin/python", b"tmp/python")
  6 |+Path(b"tmp/python").symlink_to(b"usr/bin/python")
7 7 | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
8 8 | 
9 9 | os.symlink("usr/bin/python", "tmp/python", target_is_directory=True)

PTH211 [*] `os.symlink` should be replaced by `Path.symlink_to`
  --> PTH211.py:9:1
   |
 7 | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
 8 |
 9 | os.symlink("usr/bin/python", "tmp/python", target_is_directory=True)
   | ^^^^^^^^^^
10 | os.symlink(b"usr/bin/python", b"tmp/python", target_is_directory=True)
11 | Path("tmp/python").symlink_to("usr/bin/python", target_is_directory=True)  # Ok
   |
help: Replace with `Path(...).symlink_to(...)`

ℹ Safe fix
6  6  | os.symlink(b"usr/bin/python", b"tmp/python")
7  7  | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
8  8  | 
9     |-os.symlink("usr/bin/python", "tmp/python", target_is_directory=True)
   9  |+Path("tmp/python").symlink_to("usr/bin/python", target_is_directory=True)
10 10 | os.symlink(b"usr/bin/python", b"tmp/python", target_is_directory=True)
11 11 | Path("tmp/python").symlink_to("usr/bin/python", target_is_directory=True)  # Ok
12 12 | 

PTH211 [*] `os.symlink` should be replaced by `Path.symlink_to`
  --> PTH211.py:10:1
   |
 9 | os.symlink("usr/bin/python", "tmp/python", target_is_directory=True)
10 | os.symlink(b"usr/bin/python", b"tmp/python", target_is_directory=True)
   | ^^^^^^^^^^
11 | Path("tmp/python").symlink_to("usr/bin/python", target_is_directory=True)  # Ok
   |
help: Replace with `Path(...).symlink_to(...)`

ℹ Safe fix
7  7  | Path("tmp/python").symlink_to("usr/bin/python")  # Ok
8  8  | 
9  9  | os.symlink("usr/bin/python", "tmp/python", target_is_directory=True)
10    |-os.symlink(b"usr/bin/python", b"tmp/python", target_is_directory=True)
   10 |+Path(b"tmp/python").symlink_to(b"usr/bin/python", target_is_directory=True)
11 11 | Path("tmp/python").symlink_to("usr/bin/python", target_is_directory=True)  # Ok
12 12 | 
13 13 | fd = os.open(".", os.O_RDONLY)

PTH211 `os.symlink` should be replaced by `Path.symlink_to`
  --> PTH211.py:17:1
   |
15 | os.close(fd)
16 |
17 | os.symlink(src="usr/bin/python", dst="tmp/python", unknown=True)
   | ^^^^^^^^^^
18 | os.symlink("usr/bin/python",  dst="tmp/python", target_is_directory=False)
   |
help: Replace with `Path(...).symlink_to(...)`

PTH211 [*] `os.symlink` should be replaced by `Path.symlink_to`
  --> PTH211.py:18:1
   |
17 | os.symlink(src="usr/bin/python", dst="tmp/python", unknown=True)
18 | os.symlink("usr/bin/python",  dst="tmp/python", target_is_directory=False)
   | ^^^^^^^^^^
   |
help: Replace with `Path(...).symlink_to(...)`

ℹ Safe fix
15 15 | os.close(fd)
16 16 | 
17 17 | os.symlink(src="usr/bin/python", dst="tmp/python", unknown=True)
18    |-os.symlink("usr/bin/python",  dst="tmp/python", target_is_directory=False)
   18 |+Path("tmp/python").symlink_to("usr/bin/python")
